--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+	<div>
+		<form>
+        <label for="Question"><strong>What is the capital of India?</strong></label>
+		<br>
+		<br>
+        <input type="radio" name="Question">New Delhi <br>
+        <input type="radio" name="Question">Mumbai <br>
+        </form>
+	</div>
+	<div>
+		 <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+        </blockquote>
+	</div>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
